RbA Build/src/objects/Opportunity_Financing__c.object
<CustomObject>
    <description>Junction object between Finance Programs and Opportunity.</description>
    <fields>
        <fullName>Amount_Financed__c</fullName>
        <label>Amount Financed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Finance_Program__c</fullName>
        <label>Finance Program</label>
        <referenceTo>Finance_Program__c</referenceTo>
        <relationshipLabel>Opportunity Financing</relationshipLabel>
        <relationshipName>Opportunity_Financing</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Related_Opportunity__c</fullName>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Financing</relationshipLabel>
        <relationshipName>Opportunity_Financing</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Opportunity Financing</label>
    <nameField>
        <displayFormat>OppFinancing-{00}</displayFormat>
        <label>Opportunity Financing Record #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Financing</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>